examples/errors/music/invalid_duration.abc
X:1
T:Invalid Duration
K:C
% M009: Zero denominator
C/0 D E F|
